fixed max-width/navbar spacing

--- a/static/landing/style.css
+++ b/static/landing/style.css
@@ -58,6 +58,8 @@ h3 {
   top: 0;
   z-index: 1000;
   box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  flex: auto;
+  max-width: fit-content;
 }
 
 .navbar a {
